--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "7e57bcd0",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from src.data_processing import DataPreprocessor\n",
-    "from src.model_training import ModelTrainer"
+    "from src.model_training import ModelTrainer\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "997c56d9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1d4c5cb3",
    "metadata": {},
    "outputs": [
@@ -40,6 +41,34 @@
       "Loading imdb...\n",
       "Tokenizing the dataset...\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "153228a07c0241fb98ba1529bb57b79f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/25000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ea7088eb3f1490492d706f5abfe0d81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/25000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -48,16 +77,30 @@
     "preprocessor = DataPreprocessor(model_name, max_length=256)\n",
     "tokenized_dataset = preprocessor.load_and_prepare_data(\n",
     "    \"imdb\",\n",
-    "    subset_size=1000\n",
+    "    # subset_size=1000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4decc9d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set label distribution:\n",
+      "  Negative (0): 12500 (50.0%)\n",
+      "  Positive (1): 12500 (50.0%)\n",
+      "\n",
+      "Test set label distribution:\n",
+      "  Negative (0): 12500 (50.0%)\n",
+      "  Positive (1): 12500 (50.0%)\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 4: VERIFY label balance\n",
     "train_labels = np.array(tokenized_dataset['train']['labels'])\n",
@@ -74,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "88bca2fc",
    "metadata": {},
    "outputs": [
@@ -102,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1ee7501e",
    "metadata": {},
    "outputs": [
@@ -118,7 +161,15 @@
      "output_type": "stream",
      "text": [
       "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n"
+      "  warnings.warn(warn_msg)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
     },
     {
@@ -127,8 +178,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='375' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [375/375 03:13, Epoch 3/3]\n",
+       "      <progress value='9375' max='9375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [9375/9375 56:17, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -145,30 +196,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.051100</td>\n",
-       "      <td>0.000873</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.302700</td>\n",
+       "      <td>0.303977</td>\n",
+       "      <td>0.896920</td>\n",
+       "      <td>0.942083</td>\n",
+       "      <td>0.845840</td>\n",
+       "      <td>0.891371</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.000800</td>\n",
-       "      <td>0.000354</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.195900</td>\n",
+       "      <td>0.327958</td>\n",
+       "      <td>0.914920</td>\n",
+       "      <td>0.919111</td>\n",
+       "      <td>0.909920</td>\n",
+       "      <td>0.914492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.000400</td>\n",
-       "      <td>0.000277</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.097300</td>\n",
+       "      <td>0.392854</td>\n",
+       "      <td>0.913240</td>\n",
+       "      <td>0.912284</td>\n",
+       "      <td>0.914400</td>\n",
+       "      <td>0.913341</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -184,28 +235,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
       "  warnings.warn(warn_msg)\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
       "  warnings.warn(warn_msg)\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
     },
     {
@@ -227,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "3b559d54",
    "metadata": {},
    "outputs": [
@@ -244,7 +317,15 @@
      "output_type": "stream",
      "text": [
       "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n"
+      "  warnings.warn(warn_msg)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
     },
     {
@@ -253,8 +334,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='13' max='13' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [13/13 00:11]\n",
+       "      <progress value='1563' max='1563' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1563/1563 03:51]\n",
        "    </div>\n",
        "    "
       ],
@@ -269,27 +350,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval_loss: 0.0009\n",
-      "eval_accuracy: 1.0000\n",
-      "eval_precision: 0.0000\n",
-      "eval_recall: 0.0000\n",
-      "eval_f1: 0.0000\n",
-      "eval_runtime: 16.1389\n",
-      "eval_samples_per_second: 12.3920\n",
-      "eval_steps_per_second: 0.8060\n",
+      "eval_loss: 0.3280\n",
+      "eval_accuracy: 0.9149\n",
+      "eval_precision: 0.9191\n",
+      "eval_recall: 0.9099\n",
+      "eval_f1: 0.9145\n",
+      "eval_runtime: 236.3583\n",
+      "eval_samples_per_second: 105.7720\n",
+      "eval_steps_per_second: 6.6130\n",
       "epoch: 3.0000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/Users/xander/Desktop/AI/AI_Projects/llm-fine-tuning/virtual/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
      ]
     }
    ],
@@ -303,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "f987d290",
    "metadata": {},
    "outputs": [
@@ -321,6 +390,14 @@
     "preprocessor.tokenizer.save_pretrained(output_dir)\n",
     "print(f\"\\nTokenizer saved to {output_dir}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec74d55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
